src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__try_parse_monotonic_iso8601_timestamp__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Timestamp {
            precision: None,
        },
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Timestamp {
            precision: None,
        },
        nullable: true,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: true,
    could_error: false,
}
